Project componentized in different files; container dynamic data represented as arrays and renderized with map function; css fixed for creating a new category type

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>DrivenEats</title>
+    <title>DrivenEatsReact</title>
 
 </head>
 
 <body>
+<div class="root">
     
     <div class="top-bar">
         <div class="top-bar-content">
@@ -188,7 +189,7 @@
 
     <div class="transparent-background"></div>
 
-
+</div>
 
 
     <script src="script.js"></script>
