JS Vanilla code for selecting itens refactored

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
             <div class="content-options">
 
-                <div class="option-box main-course" onclick="mainCourse(this)">
+                <div class="option-box main-course" onclick="selection(this, 'main-course')">
                     <img src="imagens/frangoBatata.jpg">
                     <div class="menu">
                         <p class="name">Frango com batata</p>
@@ -39,7 +39,7 @@
                         <p class="price">R$ 22,70<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box main-course" onclick="mainCourse(this)">
+                <div class="option-box main-course" onclick="selection(this, 'main-course')">
                     <img src="imagens/peixe.jpg">
                     <div class="menu">
                         <p class="name">Truta com arroz</p>
@@ -47,7 +47,7 @@
                         <p class="price">R$ 37,10<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box main-course" onclick="mainCourse(this)">
+                <div class="option-box main-course" onclick="selection(this, 'main-course')">
                     <img src="imagens/picanha.jpg">
                     <div class="menu">
                         <p class="name">Picanha e fritas</p>
@@ -55,7 +55,7 @@
                         <p class="price">R$ 35,90<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box main-course" onclick="mainCourse(this)"> 
+                <div class="option-box main-course" onclick="selection(this, 'main-course')"> 
                     <img src="imagens/estrogonofe-de-carne.jpg">
                     <div class="menu">
                         <p class="name">Strogonoff de carne</p>
@@ -75,7 +75,7 @@
 
             <div class="content-options">
 
-                <div class="option-box drinks" onclick="drink(this)">                 
+                <div class="option-box drinks" onclick="selection(this, 'drinks')">                 
                     <img src="imagens/suco.jpg">
                     <div class="menu">
                         <p class="name">Suco de laranja</p>
@@ -83,7 +83,7 @@
                         <p class="price">R$ 7,55<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box drinks" onclick="drink(this)">
+                <div class="option-box drinks" onclick="selection(this, 'drinks')">
                     <img src="imagens/mate.jpg">
                     <div class="menu">                       
                         <p class="name">Mate da casa</p>
@@ -91,7 +91,7 @@
                         <p class="price">R$ 4,30<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box drinks" onclick="drink(this)">
+                <div class="option-box drinks" onclick="selection(this, 'drinks')">
                     <img src="imagens/vitamina.jpg">
                     <div class="menu">                       
                         <p class="name">Vitamina de banana</p>
@@ -99,7 +99,7 @@
                         <p class="price">R$ 6,90<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box drinks" onclick="drink(this)">
+                <div class="option-box drinks" onclick="selection(this, 'drinks')">
                     <img src="imagens/coca zero.jpg">
                     <div class="menu">                        
                         <p class="name">Coca cola zero</p>
@@ -118,7 +118,7 @@
             </div>
 
             <div class="content-options">
-                <div class="option-box deserts" onclick="desert(this)">
+                <div class="option-box deserts" onclick="selection(this, 'deserts')">
                     <img src="imagens/brownie.jpg">
                     <div class="menu">                       
                         <p class="name">Brownie sem açucar</p>
@@ -126,7 +126,7 @@
                         <p class="price">R$ 14,15<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box deserts" onclick="desert(this)">
+                <div class="option-box deserts" onclick="selection(this, 'deserts')">
                     <img src="imagens/panqueca.jpg">
                     <div class="menu">                      
                         <p class="name">Panquecas de whey</p>
@@ -134,7 +134,7 @@
                         <p class="price">R$ 15,00<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box deserts" onclick="desert(this)">
+                <div class="option-box deserts" onclick="selection(this, 'deserts')">
                     <img src="imagens/torta.jpg">
                     <div class="menu">                        
                         <p class="name">Torta de limão</p>
@@ -142,7 +142,7 @@
                         <p class="price">R$ 12,80<span><ion-icon name="checkmark-circle" class="check"></ion-icon></span></p>
                     </div>
                 </div>
-                <div class="option-box deserts" onclick="desert(this)">
+                <div class="option-box deserts" onclick="selection(this, 'deserts')">
                     <img src="imagens/pudim.jpg">
                     <div class="menu">                       
                         <p class="name">Pudim fit</p>
